add resourses section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
             <li><strong>span (container):</strong> <code>&lt;span&gt;&lt;/span&gt;</code></li>
         </ul>
 
+        <h2>Helpful Resources to Learn More HTML Basics</h2>
+        
+        <ul>
+            <li>https://www.w3schools.com/html/html_intro.asp</li>
+            <li>tutorialrepublic.com/html-tutorial</li>
+            <li>https://www.codecademy.com/courses/learn-html-elements/lessons/intro-to-html/exercises/intro</li>
+        </ul>
     </div>
 </body>
 
